corrects missaligned icons
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@1030 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/AdvancedFunctions/css/advanced-functions.css
+++ b/chsdi/public/GeoAdmin.ux/AdvancedFunctions/css/advanced-functions.css
@@ -44,6 +44,7 @@
 
 .x-toolbar .advancedfunctions {
     background-image: url(../images/advanced-functions.gif);
+    background-position: 0 2px;
      font-weight: bold;
 }
 .advanced-window-panel {
